@@ -1,3 +1,6 @@
+20220701:
+ * added "cm show cache"
+
 20220629:
  * added "detect_version_using_script" in script used to detect python packages
  * major fix to properly support multiple scripts with the same tags, caching, selection, etc
